# sof-elk

./: .gitignore  FUNDING.yml  LICENSE  PULLREQUESTS.md  README.md  VM_CHANGELOG.md  VM_README.md
ansible/: README.md  hosts  local_build.yml  sof-elk_preload.yml  sof-elk_single_vm.yml  vm_build_notes.md
configfiles-UNSUPPORTED/: 0003-input-windows_json.conf  0035_input_alexa.conf  0300-input-httpdlog.conf  040-timeline-plaso-input.conf  0400-input-plaso.conf  1026-preprocess-dhcp.conf  1030-preprocess-greensql.conf  1031-preprocess-iis.conf  (+106 more)
python/: README.md  bootstrap_hatch.py  hatch  pyproject.toml  pyright_report.txt  pyright_report_2.txt  pyright_report_3.txt  ruff_report.txt  sof-elk.sh
python/scripts/: aws-cloudtrail2sof-elk.py  aws-vpcflow2sof-elk.py  aws-vpcflow2sof-elk.sh  azure-flow2sof-elk.py  change_keyboard.sh  csv2json.py  distro_prep.sh  elk_user_login.sh  es_plugin_update.sh  fw_modify.sh  geoip_update_logstash.sh  git-check-pull-needed.sh  git-remote-update.sh  kick-aws-logs.sh  load_all_dashboards.sh  ls_plugin_update.sh  nfdump2sof-elk.sh  post_merge.sh  sof-elk_branch.sh  sof-elk_clear.py  sof-elk_freeze.py  sof-elk_update.sh  vm-update-check.sh  wait_for_es.sh
python/src/: debug_import.py
python/src/sof_elk/: __init__.py  __main__.py  cli.py
python/src/sof_elk/api/: __init__.py  client.py  custom_exceptions.py  elasticsearch.py  kibana.py
python/src/sof_elk/aws/: __init__.py  cli.py  cloudtrail.py  common.py  vpcflow.py
python/src/sof_elk/azure/: __init__.py  cli.py  flow.py
python/src/sof_elk/gcp/: __init__.py  cli.py
python/src/sof_elk/geoip/: __init__.py  cli.py  update.py
python/src/sof_elk/lib/: __init__.py  dictionaries.py  ecs.py
python/src/sof_elk/lib/ecs_defs/: __init__.py  aws.py  azure.py  backend.py  cisco.py  client.py  cloud.py  common.py  destination.py  dns.py  email.py  event.py  file.py  gcp.py  google_workspace.py  host.py  http.py  kape.py  kubernetes.py  log.py  microsoft365.py  netflow.py  network.py  observer.py  process.py  related.py  rule.py  server.py  service.py  source.py  threat.py  tls.py  url.py  user.py  user_agent.py  webserver.py  winlog.py  zeek.py
python/src/sof_elk/management/: __init__.py  cli.py  distro.py  elasticsearch.py  git.py  kibana.py  logstash.py  vm.py
python/src/sof_elk/processors/: __init__.py  community_id.py  ntfs.py  transform.py  transport.py
python/src/sof_elk/utils/: __init__.py  csv.py  firewall.py  login.py  nfdump.py  system.py
python/tests/: test_api_mock.py  test_api_use_cases.py
python/tests/integration/: test_wrapper_compatibility.py
python/tests/integration/aws/: test_scripts.py
python/tests/unit/: test_azure_flow.py  test_management_elasticsearch.py  test_management_git.py  test_management_kibana.py  test_management_logstash.py  test_management_vm.py  test_refactored_scripts.py  test_utils.py  test_utils_firewall.py  test_utils_login.py  test_utils_nfdump.py  test_utils_system.py
python/tests/unit/api/: test_kibana.py
python/tests/unit/aws/: test_cloudtrail.py  test_common.py  test_kick.py  test_vpcflow.py  test_wrappers.py
python/tests/unit/cli/: test_cli_extended.py  test_sof_elk_cli.py
python/tests/unit/gcp/: test_gcp_cli.py
python/tests/unit/geoip/: test_geoip_cli.py  test_update.py
python/tests/unit/lib/: test_ecs.py
python/tests/unit/processors/: test_community_id.py  test_ntfs.py  test_transform.py  test_transport.py
(+1123 files in other folders)
